--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		Title of the website
 
 		-->
-		<title>Dimension by HTML5 UP</title>
+		<title>EE: James McNaney</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
