--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p>Mailing address: 1016 Deer Park Ct., Longview, Texas 75604</p>
+								<p>College Address: 6320 Main Street, Houston, Texas 77005</p>
 								<p>Email: jdm17@rice.edu</p>
 								<p>Cell: (903) 808-3022 </p>
 							</article>
